Implement a detaching flag for the sound(4) subsystem to take appropriate actions when we are trying to detach an audio device, but cannot because someone is using it.

This avoids applications having to wait for the DSP read data
timeout before they receive any error indication.
Tested with virtual_oss(8).

Remove some unused definitions while at it.

PR:		194727
MFC after:	1 week
Sponsored by:	Mellanox Technologies


git-svn-id: svn+ssh://svn.freebsd.org/base/head@358629 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f